--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.2.21",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1"
