--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
+    "bcrypt": "^5.1.1",
     "lucide-react": "^0.487.0",
+    "mssql": "^11.0.1",
     "next": "14.2.21",
     "react": "^18",
     "react-dom": "^18",
@@ -20,6 +22,8 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/mssql": "^9.1.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
