--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.2.21",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.56.1",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-slick": "^0.30.3",
