--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
+    "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "lucide-react": "^0.487.0",
     "mssql": "^11.0.1",
