--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
+    "jose": "^6.0.10",
     "lucide-react": "^0.487.0",
     "mssql": "^11.0.1",
     "next": "14.2.21",
