--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.7.0",
+    "@uploadthing/react": "^7.3.0",
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "jose": "^6.0.10",
@@ -21,8 +22,10 @@
     "react-hook-form": "^7.56.1",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
+    "react-select": "^5.10.1",
     "react-slick": "^0.30.3",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "uploadthing": "^7.6.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
