--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^5.1.1",
     "jose": "^6.0.10",
     "lucide-react": "^0.487.0",
+    "moment": "^2.30.1",
     "mssql": "^11.0.1",
     "next": "14.2.21",
     "react": "^18",
